--- a/main-folder/templates/upload.html
+++ b/main-folder/templates/upload.html
@@ -903,9 +903,9 @@
         
         <nav>
     <ul class="nav-links">
-        <li><a href="{{ url_for('upload') }}" class="{{ 'active' if request.path == url_for('upload') else '' }}">Home</a></li>
-        <li><a href="{{ url_for('album') }}" class="{{ 'active' if request.path == url_for('album') else '' }}">Albums</a></li>
-        <li><a href="{{ url_for('search') }}" class="{{ 'active' if request.path == url_for('search') else '' }}">Search</a></li>
+        <li><a href="#">Home</a></li>
+        <li><a href="album.html">Albums</a></li>
+        <li><a href="searches.html">Search</a></li>
         <!-- <li><a href="#" class="">Favorites</a></li>
         <li><a href="upload.html">Upload</a></li>
         <li><a href="#" class="">Analytics</a></li> -->
