--- a/main-folder/templates/upload.html
+++ b/main-folder/templates/upload.html
@@ -913,7 +913,7 @@
 </nav>
         
         <div class="header-actions">
-            <a href="editor_room" class="working-room">📋 Working Room</a>
+            <a href="editor_room.html" class="working-room">📋 Working Room</a>
             <button class="upload-btn" onclick="openUploadModal()">
                 ➕ Upload
             </button>
